[package]
name = "dicom-reader-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
dicom = "0.6"
datalink-extcore = { path = "../../datalink/crates/datalink-extcore" }

[package.metadata.component]
package = "duckdb:extension"

[package.metadata.component.target]
path = "./wit"
world = "duckdb:extension/duckdb-extension"
